@@ -3,6 +3,8 @@
 
 Added: support for remote protocol to pass parameter information
 Fixed: TextReporter logs information about the parameters of the test methods
+Fixed: concurrency issue in JUnitXMLReporter
+Fixed: output of JUnitXMLReporter must be CDATA
 
 ===========================================================================
 5.3
